# axisml-lite

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md
tests/: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
tests/api/artifact_hub/: test_kinds.py  test_meta.py  test_upload.py
tests/api/cluster_manager/: test_meta.py  test_pools.py  test_tenants.py  test_usage.py
tests/api/compute_service/: test_meta.py  test_metrics.py  test_mlrun.py  test_mlservice.py  test_traffic.py
tests/api/golden_path/: test_train_and_serve.py
tests/api/platform/: test_auth.py  test_dashboard.py  test_jobs.py  test_members.py  test_meta.py  test_tenant_quota.py  test_users.py
tests/clients/: __init__.py
tests/clients/artifacthub/: __init__.py
tests/clients/artifacthub/models/: __init__.py  artifact.py  artifact_annotations.py  artifact_complete_request.py  artifact_hub_error.py  artifact_hub_error_code.py  artifact_hub_error_details.py  artifact_initiate_request.py  artifact_initiate_request_annotations.py  artifact_initiate_request_labels.py  artifact_initiate_request_spec.py  artifact_initiate_response.py  artifact_labels.py  capabilities.py  (+8 more)
tests/clients/clustermanager/: __init__.py
tests/clients/computeservice/: __init__.py
tests/clients/platform/: __init__.py
tests/e2e/: conftest.py
tests/e2e/auth/: test_login.py
tests/e2e/jobs/: test_job_flow.py
tests/e2e/navigation/: test_routes.py
tests/e2e/tenant/: test_switch.py
tests/lib/: __init__.py  builders.py  config.py  harness.py  naming.py  oci.py  platform_helpers.py  polling.py  portforward.py  seeding.py
tests/setup/: __init__.py  _proc.py  cli.py  lite.py  seed.py  standard.py
(+772 files in other folders)
