[project]
name = "axisml-lite-tests"
version = "0.0.0"
description = "AxisML Lite black-box API and UI test suite"
requires-python = ">=3.11"
dependencies = [
    # HTTP probes + generated OpenAPI clients (openapi-python-client default stack)
    "httpx>=0.27",
    "attrs>=23.2",
    "python-dateutil>=2.9",
    # bcrypt: env-setup resets the admin password in the platform DB to a known,
    # deterministic value (Go's bcrypt verifies Python's $2b$ hashes).
    "bcrypt>=4.1",
    # Test runner + Playwright UI driver
    "pytest>=8.2",
    "pytest-playwright>=0.5",
]

[project.scripts]
test-setup = "setup.cli:setup_main"
test-teardown = "setup.cli:teardown_main"

[dependency-groups]
# Tooling: client generation from the OpenAPI specs (uv run openapi-python-client)
dev = [
    "openapi-python-client>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the importable, hand-written + generated source packages ship in the wheel.
# Test dirs (apitests/, e2e/) are discovered by pytest, never installed.
packages = ["lib", "setup", "clients"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --strict-markers -ra"
pythonpath = ["."]
testpaths = ["api", "e2e"]
markers = [
    "standard_only: requires Kubernetes and is skipped by this Lite-only suite",
    "lite_only: requires the Lite form",
    "cleanup: maintenance helpers (reap leftover e2e-* tenants), not part of a normal run",
    "slow: long-running scenarios (real scheduling / image pulls / kubelet startup)",
]
